<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LocationPreview"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/FragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/preview_background"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true">

        <TextView
            android:id="@+id/preview_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/btmsheet_company_name_default"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/preview_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/btmsheet_rating_value_default"/>

            <ImageView
                android:id="@+id/preview_rating_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/Rating_Stars_Description" />

            <TextView
                android:id="@+id/preview_ratings_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/btmsheet_ratings_count_default" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>