<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="ABOUT US"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic|bold"/>

        <TextView
            android:id="@+id/aboutUs1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/about_us_1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/aboutUs2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/about_us_2"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/aboutUs3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/about_us_3"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>